cmake_minimum_required(VERSION 3.18)
project(tools)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(NOT (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC"))
  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -pedantic-errors -O0")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall -Wextra -pedantic-errors")
endif()

file(GLOB items RELATIVE ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/*)
foreach(item ${items})
    string(REGEX MATCH "^[^.].*" dot ${item})
    if(("${dot}" STREQUAL "") OR (${item}  MATCHES ".*build.*"))
        continue()
    endif()
    if(IS_DIRECTORY ${PROJECT_SOURCE_DIR}/${item})
        message(STATUS ${item})
        add_subdirectory(${PROJECT_SOURCE_DIR}/${item})
    endif()
endforeach()
